--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <link rel="stylesheet" href="./reset.css" type="text/css" />
       <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,500" rel="stylesheet">
-    <title>Jammming</title>
+    <title>iPlayYouListen</title>
   </head>
   <body>
     <noscript>
